[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/InputMapper.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/InGameMenu/InputMap/KeySelectMenu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/InGameMenu/InputMap/ActionList.gd" type="Script" id=4]
[ext_resource path="res://Scripts/InGameMenu/InputMap/InputMenu.gd" type="Script" id=5]
[ext_resource path="res://Scripts/InGameMenu/ReturnMainMenu.gd" type="Script" id=6]
[ext_resource path="res://Fonts/pixelated.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/InGameMenu/InputMap/ReturnToInGameMenu.gd" type="Script" id=8]
[ext_resource path="res://Themes/startmenu.theme" type="Theme" id=9]
[ext_resource path="res://Scripts/InGameMenu/InputMap/ProfilesMenu.gd" type="Script" id=10]
[ext_resource path="res://Scripts/InGameMenu/InputMap/ProfilesMenu2.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 7 )

[node name="InputMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.47195
margin_top = -0.751618
margin_right = 1.47195
margin_bottom = -0.751617
theme = ExtResource( 9 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
playerselect_path = NodePath("ConfigOverlay/Column/PlayerMenu/PlayerSelect")
p1_action_list_path = NodePath("ConfigOverlay/Column/HBoxContainer/P1/ScrollContainer/ActionList")
p2_action_list_path = NodePath("ConfigOverlay/Column/HBoxContainer/P2/ScrollContainer/ActionList")
p1_profiles_menu_path = NodePath("ConfigOverlay/Column/HBoxContainer/P1/HBoxContainer/ProfilesMenu")
p2_profiles_menu_path = NodePath("ConfigOverlay/Column/HBoxContainer/P2/HBoxContainer/ProfilesMenu")
p1_keyselect_path = NodePath("ConfigOverlay/KeySelectMenuP1")
p2_keyselect_path = NodePath("ConfigOverlay/KeySelectMenuP2")

[node name="InputMapper" parent="." instance=ExtResource( 1 )]

[node name="ConfigOverlay" type="ColorRect" parent="."]
visible = false
margin_left = 8.0
margin_top = 7.0
margin_right = 471.0
margin_bottom = 268.0
color = Color( 0.160784, 0.164706, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="ConfigOverlay"]
anchor_top = 0.032
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -6.352
margin_right = -6.0
margin_bottom = -3.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ConfigOverlay/Column"]
margin_right = 452.0
margin_bottom = 16.0
size_flags_vertical = 12
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.596078, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Controls Menu"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfigOverlay/Column"]
margin_top = 31.0
margin_right = 452.0
margin_bottom = 256.0
size_flags_vertical = 3

[node name="P1" type="VBoxContainer" parent="ConfigOverlay/Column/HBoxContainer"]
margin_right = 220.0
margin_bottom = 225.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfigOverlay/Column/HBoxContainer/P1"]
margin_right = 220.0
margin_bottom = 23.0

[node name="Label" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P1/HBoxContainer"]
margin_top = 2.0
margin_right = 19.0
margin_bottom = 21.0
text = "P1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfilesMenu" type="OptionButton" parent="ConfigOverlay/Column/HBoxContainer/P1/HBoxContainer"]
margin_left = 23.0
margin_right = 41.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
flat = true
align = 1
script = ExtResource( 10 )
inputmapper_path = NodePath("../../../../../../InputMapper")

[node name="Header" type="HBoxContainer" parent="ConfigOverlay/Column/HBoxContainer/P1"]
margin_top = 27.0
margin_right = 220.0
margin_bottom = 45.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P1/Header"]
margin_right = 70.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.67451, 0.435294, 0.0980392, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Action"

[node name="Control" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P1/Header"]
margin_left = 74.0
margin_right = 145.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Control"
align = 1

[node name="Change" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P1/Header"]
margin_left = 172.0
margin_right = 220.0
margin_bottom = 18.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Change"

[node name="ScrollContainer" type="ScrollContainer" parent="ConfigOverlay/Column/HBoxContainer/P1"]
margin_top = 49.0
margin_right = 220.0
margin_bottom = 198.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionList" type="VBoxContainer" parent="ConfigOverlay/Column/HBoxContainer/P1/ScrollContainer"]
margin_right = 220.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
script = ExtResource( 4 )

[node name="P1Reset" type="Button" parent="ConfigOverlay/Column/HBoxContainer/P1"]
margin_top = 202.0
margin_right = 220.0
margin_bottom = 225.0
text = "Reset"

[node name="VSeparator" type="VSeparator" parent="ConfigOverlay/Column/HBoxContainer"]
margin_left = 224.0
margin_right = 228.0
margin_bottom = 225.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P2" type="VBoxContainer" parent="ConfigOverlay/Column/HBoxContainer"]
margin_left = 232.0
margin_right = 452.0
margin_bottom = 225.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ConfigOverlay/Column/HBoxContainer/P2"]
margin_right = 220.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P2/HBoxContainer"]
margin_top = 2.0
margin_right = 19.0
margin_bottom = 21.0
text = "P2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfilesMenu" type="OptionButton" parent="ConfigOverlay/Column/HBoxContainer/P2/HBoxContainer"]
margin_left = 23.0
margin_right = 41.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
toggle_mode = false
flat = true
align = 1
script = ExtResource( 11 )

[node name="Header" type="HBoxContainer" parent="ConfigOverlay/Column/HBoxContainer/P2"]
margin_top = 27.0
margin_right = 220.0
margin_bottom = 45.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P2/Header"]
margin_right = 70.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.67451, 0.435294, 0.0980392, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Action"

[node name="Control" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P2/Header"]
margin_left = 74.0
margin_right = 145.0
margin_bottom = 18.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Control"
align = 1

[node name="Change" type="Label" parent="ConfigOverlay/Column/HBoxContainer/P2/Header"]
margin_left = 172.0
margin_right = 220.0
margin_bottom = 18.0
size_flags_horizontal = 10
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Change"

[node name="ScrollContainer" type="ScrollContainer" parent="ConfigOverlay/Column/HBoxContainer/P2"]
margin_top = 49.0
margin_right = 220.0
margin_bottom = 198.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionList" type="VBoxContainer" parent="ConfigOverlay/Column/HBoxContainer/P2/ScrollContainer"]
margin_right = 220.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
script = ExtResource( 4 )

[node name="P2Reset" type="Button" parent="ConfigOverlay/Column/HBoxContainer/P2"]
margin_top = 202.0
margin_right = 220.0
margin_bottom = 225.0
text = "Reset"

[node name="PlayerMenu" type="HBoxContainer" parent="ConfigOverlay/Column"]
visible = false
margin_left = 207.0
margin_top = 274.0
margin_right = 244.0
margin_bottom = 297.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerSelect" type="OptionButton" parent="ConfigOverlay/Column/PlayerMenu"]
margin_right = 37.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "P1"
align = 1
items = [ "P1", null, false, 0, null, "P2", null, false, 1, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToInGameMenu" type="Button" parent="ConfigOverlay/Column"]
visible = false
margin_top = 233.0
margin_right = 452.0
margin_bottom = 256.0
text = "Back"
script = ExtResource( 8 )

[node name="ReturnMainMenu" type="Button" parent="ConfigOverlay/Column"]
visible = false
margin_top = 274.0
margin_right = 452.0
margin_bottom = 297.0
size_flags_vertical = 4
text = "Return to Main Menu"
script = ExtResource( 6 )

[node name="KeySelectMenuP1" type="Panel" parent="ConfigOverlay"]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -8.0
margin_right = -234.0
margin_bottom = -8.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfigOverlay/KeySelectMenuP1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -50.0
margin_right = 240.0
margin_bottom = 50.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 5
text = "Press a Button..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeySelectMenuP2" type="Panel" parent="ConfigOverlay"]
visible = false
self_modulate = Color( 1, 1, 1, 0.588235 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 231.457
margin_top = -8.0
margin_right = 4.45749
margin_bottom = -8.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfigOverlay/KeySelectMenuP2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -50.0
margin_right = 240.0
margin_bottom = 50.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 5
text = "Press a Button..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="ConfigOverlay" to="ConfigOverlay/Column/HBoxContainer/P1/HBoxContainer/ProfilesMenu" method="_on_ConfigOverlay_visibility_changed"]
[connection signal="item_selected" from="ConfigOverlay/Column/HBoxContainer/P1/HBoxContainer/ProfilesMenu" to="InputMapper" method="_on_ProfilesMenu_item_selected" binds= [ 0 ]]
[connection signal="pressed" from="ConfigOverlay/Column/HBoxContainer/P1/P1Reset" to="." method="_on_P1Reset_pressed"]
[connection signal="item_selected" from="ConfigOverlay/Column/HBoxContainer/P2/HBoxContainer/ProfilesMenu" to="InputMapper" method="_on_ProfilesMenu_item_selected" binds= [ 1 ]]
[connection signal="pressed" from="ConfigOverlay/Column/HBoxContainer/P2/P2Reset" to="." method="_on_P2Reset_pressed"]
[connection signal="item_selected" from="ConfigOverlay/Column/PlayerMenu/PlayerSelect" to="ConfigOverlay" method="_on_PlayerSelect_item_selected"]
[connection signal="item_selected" from="ConfigOverlay/Column/PlayerMenu/PlayerSelect" to="." method="_on_PlayerSelect_item_selected"]
[connection signal="button_down" from="ConfigOverlay/Column/ReturnToInGameMenu" to="ConfigOverlay/Column/ReturnToInGameMenu" method="_on_button_down"]
[connection signal="button_down" from="ConfigOverlay/Column/ReturnToInGameMenu" to="." method="_on_ReturnToInGameMenu_button_down"]
[connection signal="button_down" from="ConfigOverlay/Column/ReturnMainMenu" to="ConfigOverlay/Column/ReturnMainMenu" method="_on_button_down"]
[connection signal="button_down" from="ConfigOverlay/Column/ReturnMainMenu" to="." method="_on_ReturnMainMenu_button_down"]
