[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/InputMap/InputMapper.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/InGameMenu/InputMap/KeySelectMenu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/InGameMenu/InputMap/ActionList.gd" type="Script" id=4]
[ext_resource path="res://Scripts/InGameMenu/InputMap/InputMenu.gd" type="Script" id=5]

[sub_resource type="GDScript" id=1]
script/source = "extends OptionButton

func initialize(input_mapper):
	for profile_index in input_mapper.profiles:
		var profile_name = input_mapper.profiles[profile_index].capitalize()
		add_item(profile_name, profile_index)
	self.connect(\"item_selected\", input_mapper, \"_on_ProfilesMenu_item_selected\")


func _on_ConfigOverlay_visibility_changed():
	grab_focus()
	
"

[node name="InputMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -2.16742
margin_right = 1.0
margin_bottom = -2.16742
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMapper" parent="." instance=ExtResource( 1 )]

[node name="ConfigOverlay" type="ColorRect" parent="."]
visible = false
margin_left = 8.0
margin_top = 7.0
margin_right = 471.0
margin_bottom = 259.0
color = Color( 0.160784, 0.164706, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Column" type="VBoxContainer" parent="ConfigOverlay"]
anchor_top = 0.032
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -0.0640001
margin_right = -6.0
margin_bottom = -4.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ConfigOverlay/Column"]
margin_right = 452.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.596078, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Controls Menu"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProfilesMenu" type="OptionButton" parent="ConfigOverlay/Column"]
margin_left = 211.0
margin_top = 41.0
margin_right = 240.0
margin_bottom = 61.0
size_flags_horizontal = 4
toggle_mode = false
flat = true
script = SubResource( 1 )

[node name="Header" type="HBoxContainer" parent="ConfigOverlay/Column"]
margin_top = 86.0
margin_right = 452.0
margin_bottom = 100.0

[node name="Action" type="Label" parent="ConfigOverlay/Column/Header"]
margin_right = 148.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0.67451, 0.435294, 0.0980392, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Action"
uppercase = true

[node name="Control" type="Label" parent="ConfigOverlay/Column/Header"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Control"
align = 1
uppercase = true

[node name="Change" type="Label" parent="ConfigOverlay/Column/Header"]
margin_left = 398.0
margin_right = 452.0
margin_bottom = 14.0
size_flags_horizontal = 10
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 1, 0.592157, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 4
text = "Change"
uppercase = true

[node name="ScrollContainer" type="ScrollContainer" parent="ConfigOverlay/Column"]
margin_top = 125.0
margin_right = 452.0
margin_bottom = 240.0
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="ConfigOverlay/Column/ScrollContainer"]
margin_right = 452.0
margin_bottom = 115.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
script = ExtResource( 4 )

[node name="PlayButton" type="Button" parent="ConfigOverlay/Column"]
visible = false
margin_left = 150.0
margin_top = 220.0
margin_right = 302.0
margin_bottom = 240.0
size_flags_horizontal = 4
disabled = true
text = "Test Buttons In Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeySelectMenu" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.679569 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.667419
margin_top = -0.667419
margin_right = 0.667419
margin_bottom = -0.667419
script = ExtResource( 3 )

[node name="Label" type="Label" parent="KeySelectMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -50.0
margin_right = 240.0
margin_bottom = 50.0
size_flags_vertical = 5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_y = 5
text = "Press a Button..."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="visibility_changed" from="ConfigOverlay" to="ConfigOverlay/Column/ProfilesMenu" method="_on_ConfigOverlay_visibility_changed"]
[connection signal="pressed" from="ConfigOverlay/Column/PlayButton" to="." method="_on_PlayButton_pressed"]
